Restructure docs: new Engine/Integrations/Rootfi tabs with integration pages

--- a/integrations/woocommerce/setup.mdx
+++ b/integrations/woocommerce/setup.mdx
@@ -1,6 +1,7 @@
 ---
 title: "WooCommerce integration"
 description: "Learn how Rootfi integrates with WooCommerce to fetch e-commerce data"
+icon: "wordpress"
 ---
 
 ## Overview
