Restructure Product tab: nest integrations under Indirect Tax, remove icons

--- a/integrations/woocommerce/setup.mdx
+++ b/integrations/woocommerce/setup.mdx
@@ -1,7 +1,6 @@
 ---
-title: "WooCommerce integration"
+title: "WooCommerce"
 description: "Learn how Rootfi integrates with WooCommerce to fetch e-commerce data"
-icon: "wordpress"
 ---
 
 ## Overview
